--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ absl-py==1.4.0
 asttokens==2.4.0
 astunparse==1.6.3
 backcall==0.2.0
+beautifulsoup4==4.12.2
 cachetools==5.3.1
 certifi==2023.7.22
+chardet==3.0.4
 charset-normalizer==3.2.0
+click==8.1.7
 comm==0.1.4
 debugpy==1.7.0
 decorator==5.1.1
@@ -19,13 +22,21 @@ google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.58.0
+h11==0.9.0
+h2==3.2.0
 h5py==3.9.0
-idna==3.4
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 ipykernel==6.25.2
 ipython==8.15.0
 ipywidgets==8.1.0
 java-utilities==0.2.0
 jedi==0.18.2
+joblib==1.3.2
 jpy==0.14.0
 jupyter_client==8.3.1
 jupyter_core==5.3.1
@@ -37,6 +48,7 @@ Markdown==3.4.4
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.7
+nltk==3.8.1
 numba==0.57.1
 numpy==1.24.3
 oauthlib==3.2.2
@@ -59,10 +71,14 @@ Pygments==2.16.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
+regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
+rfc3986==1.5.0
 rsa==4.9
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 stack-data==0.6.2
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
@@ -70,11 +86,14 @@ tensorflow==2.13.0
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.3.0
+textblob==0.17.1
 tornado==6.3.3
+tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.16
+vaderSentiment==3.3.2
 wcwidth==0.2.6
 Werkzeug==2.3.7
 widgetsnbextension==4.0.8
