--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ chardet==3.0.4
 charset-normalizer==3.2.0
 click==8.1.7
 comm==0.1.4
+contourpy==1.1.1
+cycler==0.11.0
 debugpy==1.7.0
 decorator==5.1.1
 deephaven-core==0.28.0
@@ -17,6 +19,7 @@ deephaven-plugin==0.5.0
 deephaven-server==0.28.0
 executing==1.2.0
 flatbuffers==23.5.26
+fonttools==4.42.1
 gast==0.4.0
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
@@ -42,10 +45,12 @@ jupyter_client==8.3.1
 jupyter_core==5.3.1
 jupyterlab-widgets==3.0.8
 keras==2.13.1
+kiwisolver==1.4.5
 libclang==16.0.6
 llvmlite==0.40.1
 Markdown==3.4.4
 MarkupSafe==2.1.3
+matplotlib==3.8.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.7
 nltk==3.8.1
@@ -58,6 +63,7 @@ pandas==2.1.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.0.1
 platformdirs==3.10.0
 prompt-toolkit==3.0.39
 protobuf==4.24.3
@@ -68,6 +74,7 @@ pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 Pygments==2.16.1
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
@@ -76,6 +83,9 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rsa==4.9
+scikit-learn==1.3.0
+scipy==1.11.2
+seaborn==0.12.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -87,6 +97,7 @@ tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.3.0
 textblob==0.17.1
+threadpoolctl==3.2.0
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.9.0
