--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,54 @@
-absl-py==1.4.0
 asttokens==2.4.0
-astunparse==1.6.3
 backcall==0.2.0
-beautifulsoup4==4.12.2
-cachetools==5.3.1
-certifi==2023.7.22
-chardet==3.0.4
-charset-normalizer==3.2.0
 click==8.1.7
 comm==0.1.4
-contourpy==1.1.1
-cycler==0.11.0
-debugpy==1.7.0
+debugpy==1.8.0
 decorator==5.1.1
-deephaven-core==0.28.0
-deephaven-ipywidgets==0.3.2
+deephaven-core==0.28.1
 deephaven-plugin==0.5.0
-deephaven-server==0.28.0
-executing==1.2.0
-flatbuffers==23.5.26
-fonttools==4.42.1
-gast==0.4.0
-google-auth==2.22.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.58.0
-h11==0.9.0
-h2==3.2.0
-h5py==3.9.0
-hpack==3.0.0
-hstspreload==2023.1.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
+deephaven-server==0.28.1
+executing==2.0.0
+importlib-metadata==6.8.0
 ipykernel==6.25.2
-ipython==8.15.0
-ipywidgets==8.1.0
+ipython==8.12.3
 java-utilities==0.2.0
 jedi==0.18.2
 joblib==1.3.2
 jpy==0.14.0
 jupyter_client==8.3.1
-jupyter_core==5.3.1
-jupyterlab-widgets==3.0.8
-keras==2.13.1
-kiwisolver==1.4.5
-libclang==16.0.6
-llvmlite==0.40.1
-Markdown==3.4.4
-MarkupSafe==2.1.3
-matplotlib==3.8.0
+jupyter_core==5.3.2
+llvmlite==0.41.0
 matplotlib-inline==0.1.6
-nest-asyncio==1.5.7
+nest-asyncio==1.5.8
 nltk==3.8.1
-numba==0.57.1
-numpy==1.24.3
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.1
-pandas==2.1.0
+numba==0.58.0
+numpy==1.24.4
+packaging==23.2
+pandas==2.0.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.1
-platformdirs==3.10.0
+pkg_resources==0.0.0
+platformdirs==3.11.0
 prompt-toolkit==3.0.39
-protobuf==4.24.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
 Pygments==2.16.1
-pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3986==1.5.0
-rsa==4.9
-scikit-learn==1.3.0
-scipy==1.11.2
-seaborn==0.12.2
+regex==2023.10.3
+scikit-learn==1.3.1
+scipy==1.10.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.6.2
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
-textblob==0.17.1
+stack-data==0.6.3
 threadpoolctl==3.2.0
 tornado==6.3.3
 tqdm==4.66.1
-traitlets==5.9.0
-typing_extensions==4.5.0
+traitlets==5.11.2
+typing_extensions==4.8.0
 tzdata==2023.3
-urllib3==1.26.16
-vaderSentiment==3.3.2
-wcwidth==0.2.6
-Werkzeug==2.3.7
-widgetsnbextension==4.0.8
-wrapt==1.15.0
+wcwidth==0.2.8
+zipp==3.17.0
