--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,33 @@
-asttokens==2.4.0
-backcall==0.2.0
-click==8.1.7
-comm==0.1.4
+asttokens==2.4.1
+comm==0.2.0
 debugpy==1.8.0
 decorator==5.1.1
-deephaven-core==0.28.1
-deephaven-plugin==0.5.0
-deephaven-server==0.28.1
-executing==2.0.0
-importlib-metadata==6.8.0
-ipykernel==6.25.2
-ipython==8.12.3
-java-utilities==0.2.0
-jedi==0.18.2
-joblib==1.3.2
-jpy==0.14.0
-jupyter_client==8.3.1
-jupyter_core==5.3.2
-llvmlite==0.41.0
+exceptiongroup==1.2.0
+executing==2.0.1
+ipykernel==6.26.0
+ipython==8.18.1
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.8
-nltk==3.8.1
-numba==0.58.0
-numpy==1.24.4
+numpy==1.26.2
 packaging==23.2
-pandas==2.0.3
+pandas==2.1.3
 parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-pkg_resources==0.0.0
-platformdirs==3.11.0
-prompt-toolkit==3.0.39
-psutil==5.9.5
+pexpect==4.9.0
+platformdirs==4.0.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==13.0.0
-Pygments==2.16.1
+Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
-regex==2023.10.3
-scikit-learn==1.3.1
-scipy==1.10.1
 six==1.16.0
 stack-data==0.6.3
-threadpoolctl==3.2.0
 tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.11.2
-typing_extensions==4.8.0
+traitlets==5.14.0
 tzdata==2023.3
-wcwidth==0.2.8
-zipp==3.17.0
+wcwidth==0.2.12
